--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
   />
   <link rel="stylesheet" href="css/styles.css" />
-  <body></body>
+  <body>
+    <h1>heading 1</h1>
+    <h2>heading 2</h2>
+    <h3>heading 3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, porro
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda,
+      maiores.. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
+      amet vero asperiores eum mollitia accusamus porro quam debitis unde
+      placeat!
+    </p>
+  </body>
 </html>
