Link style and component addition

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
       amet vero asperiores eum mollitia accusamus porro quam debitis unde
       placeat!
     </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
