Badges and sorting css properties

--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
   />
   <link rel="stylesheet" href="css/styles.css" />
   <body>
-    <h1>heading 1</h1>
-    <h2>heading 2</h2>
     <h3>heading 3</h3>
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, porro
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda,
-      maiores.. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
-      amet vero asperiores eum mollitia accusamus porro quam debitis unde
-      placeat!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, porr
     </p>
-    <a href="#" class="link-arrow">Learn More</a>
+    <a href="#" class="link-arrow">Learn More</a><br />
+    <span class="badge badge--primary">10% off</span>
+    <span class="badge badge--secondary">10% off</span>
+    <span class="badge badge--primary badge--small">10% off</span>
+    <span class="badge badge--secondary badge--small">10% off</span>
   </body>
 </html>
