List and tick-lists

--- a/index.html
+++ b/index.html
@@ -23,8 +23,20 @@
     </p>
     <a href="#" class="link-arrow">Learn More</a><br />
     <span class="badge badge--primary">10% off</span>
-    <span class="badge badge--secondary">10% off</span>
-    <span class="badge badge--primary badge--small">10% off</span>
-    <span class="badge badge--secondary badge--small">10% off</span>
+    <ul class="list">
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+    </ul>
+    <ul class="list list--inline">
+      <li class="list__items">item 1</li>
+      <li class="list__items">item 3</li>
+      <li class="list__items">item 2</li>
+    </ul>
+    <ul class="list--tick">
+      <li class="list__items">item 1</li>
+      <li class="list__items">item 2</li>
+      <li class="list__items">item 3</li>
+    </ul>
   </body>
 </html>
