Icon and icon container

--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
       <li class="list__items">item 2</li>
       <li class="list__items">item 3</li>
     </ul>
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="Images/sprite.svg#easy"></use>
+      </svg>
+    </span>
   </body>
 </html>
