--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <span class="icon-container">
       <svg class="icon icon--primary">
         <use xlink:href="Images/sprite.svg#easy"></use>
-      </svg>
-    </span>
+      </svg> </span
+    ><br />
+    <a href="index2.html" target="_blank">More....</a>
   </body>
 </html>
