Input and input groups

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
         <use xlink:href="Images/sprite.svg#easy"></use>
       </svg> </span
     ><br />
-    <a href="index2.html" target="_blank">More....</a>
+    <a href="Extra.html" target="_blank">More....</a>
   </body>
 </html>
