--- a/Daily.html
+++ b/Daily.html
@@ -16,27 +16,35 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
   />
   <link rel="stylesheet" href="css/styles.css" />
+
   <body>
-    <div class="block block--dark hero">
-      <nav class="navbar collapsible">
-        <a href="/"><img src="Images/logo.png" alt="Logo of the webpage" /></a>
-        <svg class="icon icon--white nav__toggler">
-          <use xlink:href="Images/sprite.svg#menu"></use>
-        </svg>
-        <ul class="list nav__list collapsible__content">
-          <li class="nav__item"><a href="#">Hosting</a></li>
-          <li class="nav__item"><a href="#">VPS</a></li>
-          <li class="nav__item"><a href="#">Pricing</a></li>
-        </ul>
-      </nav>
-      <div class="grid grid--1x2">
-        <header class="hero__content">
-          <h2 class="hero__heading">Cloud Hosting for Pros</h2>
-          <p class="hero__tagline">Deploy your websites in less than 60sec.</p>
-          <button class="btn btn--accent link-arrow">Get Started</button>
-        </header>
-        <img src="Images/banner.png" alt="" class="hero__img" />
+    <div class="block container block--domain">
+      <div class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p class="block__content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+          soluta.
+        </p>
       </div>
+      <div class="input-group">
+        <input type="text" class="input" placeholder="Enter domain name..." />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use
+              xlink:href="Images/sprite.svg#search
+            "
+            ></use></svg
+          >Search
+        </button>
+      </div>
+      <ul class="list block--domain__prices">
+        <li><span class="badge badge--secondary">.com $9</span></li>
+        <li><span class="badge badge--secondary">.sg $10</span></li>
+        <li><span class="badge badge--secondary">.info $14</span></li>
+        <li><span class="badge badge--secondary">.net $10</span></li>
+        <li><span class="badge badge--secondary">.xyz $10</span></li>
+        <li><span class="badge badge--secondary">.space $11</span></li>
+      </ul>
     </div>
   </body>
   <script src="js/main.js"></script>
