Plans block and updating plans.html in earlier commit

--- a/Plans.html
+++ b/Plans.html
@@ -17,7 +17,7 @@
   />
   <link rel="stylesheet" href="css/styles.css" />
   <body>
-    <div class="plan--container">
+    <div class="block block--plans container grid grid--1x3">
       <div class="plan">
         <div class="card card-secondary">
           <header class="card__header">
@@ -71,6 +71,7 @@
               <li class="list__item">Unlimited Websites</li>
               <li class="list__item">300GB of storage</li>
               <li class="list__item">Unrestricted bandwidth</li>
+
               <li class="list__item">2 CPU cores</li>
             </ul>
             <button class="btn btn--outline btn--block">Buy now</button>
