--- a/Daily.html
+++ b/Daily.html
@@ -18,34 +18,67 @@
   <link rel="stylesheet" href="css/styles.css" />
 
   <body>
-    <div class="block container block--domain">
-      <div class="block__header">
-        <h2>Starting at $9 per month</h2>
-        <p class="block__content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-          soluta.
-        </p>
+    <section class="block block--plans container grid grid--1x3">
+      <div class="plan">
+        <div class="card card-secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--primary badge--small">10%off</span>
+            <span class="plan__description">East start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">300GB of storage</li>
+              <li class="list__item">Unrestricted bandwidth</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy now</button>
+          </div>
+        </div>
       </div>
-      <div class="input-group">
-        <input type="text" class="input" placeholder="Enter domain name..." />
-        <button class="btn btn--accent">
-          <svg class="icon icon--white">
-            <use
-              xlink:href="Images/sprite.svg#search
-            "
-            ></use></svg
-          >Search
-        </button>
+      <div class="plan plan--popular">
+        <div class="card card-primary">
+          <header class="card__header">
+            <h3 class="plan__name">Buisness level</h3>
+            <span class="plan__price">$39</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">20%off</span>
+            <span class="plan__description">East start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">100GB of storage</li>
+              <li class="list__item">Unrestricted bandwidth</li>
+              <li class="list__item">Lifetime free access</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy now</button>
+          </div>
+        </div>
       </div>
-      <ul class="list block--domain__prices">
-        <li><span class="badge badge--secondary">.com $9</span></li>
-        <li><span class="badge badge--secondary">.sg $10</span></li>
-        <li><span class="badge badge--secondary">.info $14</span></li>
-        <li><span class="badge badge--secondary">.net $10</span></li>
-        <li><span class="badge badge--secondary">.xyz $10</span></li>
-        <li><span class="badge badge--secondary">.space $11</span></li>
-      </ul>
-    </div>
+      <div class="plan">
+        <div class="card card-secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Buisness plus</h3>
+            <span class="plan__price">$59</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--primary badge--small">15%off</span>
+            <span class="plan__description">Optimal cloud experience</span>
+          </header>
+          <div class="card__body">
+            <ul class="list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">300GB of storage</li>
+              <li class="list__item">Unrestricted bandwidth</li>
+              <li class="list__item">2 CPU cores</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy now</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="js/main.js"></script>
 </html>
