--- a/Daily.html
+++ b/Daily.html
@@ -18,66 +18,65 @@
   <link rel="stylesheet" href="css/styles.css" />
 
   <body>
-    <section class="block block--plans container grid grid--1x3">
-      <div class="plan">
-        <div class="card card-secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--primary badge--small">10%off</span>
-            <span class="plan__description">East start on the cloud</span>
-          </header>
-          <div class="card__body">
-            <ul class="list--tick">
-              <li class="list__item">Unlimited Websites</li>
-              <li class="list__item">300GB of storage</li>
-              <li class="list__item">Unrestricted bandwidth</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy now</button>
-          </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Host on the cloud to keep Growing</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+          nulla.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
+            nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
+            quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
-      </div>
-      <div class="plan plan--popular">
-        <div class="card card-primary">
-          <header class="card__header">
-            <h3 class="plan__name">Buisness level</h3>
-            <span class="plan__price">$39</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">20%off</span>
-            <span class="plan__description">East start on the cloud</span>
-          </header>
-          <div class="card__body">
-            <ul class="list--tick">
-              <li class="list__item">Unlimited Websites</li>
-              <li class="list__item">100GB of storage</li>
-              <li class="list__item">Unrestricted bandwidth</li>
-              <li class="list__item">Lifetime free access</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy now</button>
-          </div>
+        <img src="Images/easy.jpg" alt="" class="hero__img" />
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
+            nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
+            quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
-      </div>
-      <div class="plan">
-        <div class="card card-secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Buisness plus</h3>
-            <span class="plan__price">$59</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--primary badge--small">15%off</span>
-            <span class="plan__description">Optimal cloud experience</span>
-          </header>
-          <div class="card__body">
-            <ul class="list--tick">
-              <li class="list__item">Unlimited Websites</li>
-              <li class="list__item">300GB of storage</li>
-              <li class="list__item">Unrestricted bandwidth</li>
-              <li class="list__item">2 CPU cores</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy now</button>
-          </div>
+        <img src="Images/fast.jpg" alt="" class="hero__img" />
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress Made easy</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
+            nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
+            quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
-      </div>
+        <img src="Images/wordpress.jpg" alt="" class="hero__img" />
+      </article>
     </section>
   </body>
   <script src="js/main.js"></script>
