--- a/Daily.html
+++ b/Daily.html
@@ -18,65 +18,63 @@
   <link rel="stylesheet" href="css/styles.css" />
 
   <body>
-    <section class="block container">
-      <header class="block__header">
-        <h2 class="block__heading">Host on the cloud to keep Growing</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-          nulla.
-        </p>
-      </header>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="Images/sprite.svg#easy"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-            nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
-            quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img src="Images/easy.jpg" alt="" class="hero__img" />
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="Images/sprite.svg#computer"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Simply Fast Websites</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-            nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
-            quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img src="Images/fast.jpg" alt="" class="hero__img" />
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="Images/sprite.svg#wordpress"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Wordpress Made easy</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-            nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
-            quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img src="Images/wordpress.jpg" alt="" class="hero__img" />
-      </article>
+    <section class="block block--dark block-showcase">
+      <div class="block__header">
+        <h2>User Friendly Interface</h2>
+      </div>
+      <div class="container grid grid--1x2">
+        <img class="block-showcase__image" src="Images/ipad.png" />
+        <ul class="list">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging ,Git and WP-CLI</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam,
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching and more</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum v
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </body>
   <script src="js/main.js"></script>
