--- a/Daily.html
+++ b/Daily.html
@@ -18,64 +18,89 @@
   <link rel="stylesheet" href="css/styles.css" />
 
   <body>
-    <section class="block block--dark block-showcase">
-      <div class="block__header">
-        <h2>User Friendly Interface</h2>
+    <footer class="block block--dark footer">
+      <div class="container grid">
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Products</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="Images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Random</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="Images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Content</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="Images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Content</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="Images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Content</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="Images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="Images/logo.png" alt="Logo of the brand" />
+          <p class="footer__copyright">Copyright 2023 Mithun</p>
+        </section>
       </div>
-      <div class="container grid grid--1x2">
-        <img class="block-showcase__image" src="Images/ipad.png" />
-        <ul class="list">
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veniam quisquam, ex nostrum vero
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Staging ,Git and WP-CLI</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veniam quisquam,
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Dynamic Caching and more</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veniam quisquam, ex nostrum v
-                </p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
+    </footer>
   </body>
   <script src="js/main.js"></script>
 </html>
